готовая логика нотификации + endpoint
