# app/Http/Controllers/Swagger/Api/NotificationController.php
@@ -19,13 +19,12 @@ use App\Http\Controllers\Controller;
  *                      @OA\Property(property="code", type="integer", format="int32", description="Шестизначный код", minimum=100000, maximum=999999, example="000000"),
  *                  )
  *              },
- *
  *          )
  *      ),
  *
  *      @OA\Response(
  *          response="200",
- *          description="Successfully confirm email",
+ *          description="Successfully confirm notification",
  *          @OA\JsonContent(
  *              @OA\Property(property="data", ref="#/components/schemas/UserResource"),
  *              @OA\Property(property="message", type="string", example="Successfully confirm email"),
@@ -41,22 +40,28 @@ use App\Http\Controllers\Controller;
  *      ),
  *
  *      @OA\Response(
- *          response="400",
- *          description="Ошибка, неверный код.",
+ *          response="401",
+ *          description="Не авторизован.",
  *          @OA\JsonContent(
- *              @OA\Property(property="message", type="string", example="Ошибка, неверный код."),
+ *              @OA\Property(property="message", type="string", example="Не авторизован."),
+ *          )
+ *      ),
+ *
+ *      @OA\Response(
+ *          response="400",
+ *          description="Ошибка, неверный код или он уже был подтверждён.",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="message", type="string", example="Ошибка, неверный код или он уже был подтверждён."),
  *          )
  *      ),
  *
  *      @OA\Response(
  *          response="404",
- *          description="Error confirm - вылетает если не прошло проверку на email/phone в будущем пока в тесте",
+ *          description="ошибка проверки кода Email/Phone",
  *          @OA\JsonContent(
  *              @OA\Property(property="message", type="string", example="Error confirm"),
  *          )
  *      ),
- *
- *
  *
  *      security={
  *         {"bearerAuth": {}}
@@ -66,9 +71,20 @@ use App\Http\Controllers\Controller;
  *
  * @OA\Post(
  *
- *      path="/api/confirmation/code/again",
+ *      path="/api/confirmation/code/send",
  *      summary="Активировать email или phone по коду",
  *      tags={"Notification"},
+ *
+ *      @OA\RequestBody(
+ *          required=true,
+ *          @OA\JsonContent(
+ *              allOf={
+ *                 @OA\Schema(
+ *                      @OA\Property(property="type", type="string", enum={"phone", "email"}, description="Тип отправки нотификации email/phone - указывать в поле type:email/phone"),
+ *                  )
+ *              },
+ *          )
+ *      ),
  *
  *      @OA\Response(
  *          response="500",
@@ -79,18 +95,18 @@ use App\Http\Controllers\Controller;
  *      ),
  *
  *      @OA\Response(
- *          response="404",
- *          description="Email подтверждён",
+ *          response="401",
+ *          description="Email/Phone уже подтверждён.",
  *          @OA\JsonContent(
- *              @OA\Property(property="message", type="string", example="Email подтверждён"),
+ *              @OA\Property(property="message", type="string", example="Email/Phone уже подтверждён."),
  *          )
  *      ),
  *
  *      @OA\Response(
  *          response="200",
- *          description="Successfully email send - *старый код для активации был заменён",
+ *          description="Успешная отправка нотификации",
  *          @OA\JsonContent(
- *              @OA\Property(property="message", type="string", example="Successfully email send"),
+ *              @OA\Property(property="message", type="string", example="Successfully notification send"),
  *          )
  *      ),
  *
