# routes/api.php
@@ -30,7 +30,7 @@ Route::prefix('auth')->controller(AuthController::class)->group(function () {
 Route::middleware(['auth:api'])->group(function () {
 
     Route::post('/confirmation/code', [NotificationController::class, 'confirmCode']);
-    Route::post('/confirmation/code/again', [NotificationController::class, 'sendNotification']);
+    Route::post('/confirmation/send', [NotificationController::class, 'sendNotification']);
 
 });
 
